--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <h1 class="main-title">Placify</h1>
       <p class="subtitle">AI-powered smart placement assistant</p>
       <div class="btn-group">
-        <button onclick="location.href='/client/pages/student.html'">I'm a Student</button>
-        <button onclick="location.href='/client/pages/company.html'">I'm a Company</button>
+        <button onclick="location.href='student.html'">I'm a Student</button>
+        <button onclick="location.href='company.html'">I'm a Company</button>
       </div>
     </div>
   </div>
