--- a/company-select.html
+++ b/company-select.html
@@ -55,7 +55,7 @@
 
     if (!student) {
       alert("Please log in first!");
-      window.location.href = "/client/pages/login.html";
+      window.location.href = "login.html";
     }
 
     const domain = student.domain;
