--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
 <body>
   <div class="login-box">
     <h2>Student Login</h2>
-    <input type="text" id="regId" placeholder="Enter Register ID" />
+    <input type="text" id="registerId" placeholder="Enter Register ID" />
     <input type="password" id="password" placeholder="Enter Password" />
     <button onclick="loginStudent()">Login</button>
   </div>
